# myAssistant

./: .gitignore  CLAUDE.md  Dockerfile  crontab  main.py  pyproject.toml  test_main.py
.github/workflows/: python-app.yml
