[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "myassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.80.0"
]

[tool.setuptools]
py-modules = ["main"]
